[package]
version = "0.5.0"
edition = "2018"
name = "toposort-scc"
description = "An implementation of Kahn's algorithm for topological sorting and Kosaraju's algorithm for strongly connected components"

license = "MIT OR Apache-2.0"
authors = ["Ferdinand Bachmann <theferdi265@gmail.com>"]
repository = "https://github.com/Ferdi265/toposort-scc"
readme = "README.md"

keywords = ["toposort", "scc", "graph", "kahn", "kosaraju"]
categories = ["algorithms"]

[package.metadata.docs.rs]
features = ["id-arena"]

[dependencies]
id-arena = { version = "2", optional = true }
